--- a/data/home.yaml
+++ b/data/home.yaml
@@ -1,7 +1,7 @@
 ---
 hero:
-  heading: Boost the growth of your business
-  body: We design, build and support websites. We make your website stand out
+  heading: Give your business a professional & trustworthy feel
+  body: Elevate the customer experience with professionally designed websites for real estate and small business
   image: https://res.cloudinary.com/hungryram19/image/upload/v1627958655/hungryram/backdrop_pb13su.jpg
 featured_blocks:
 - heading: Define
