--- a/data/home.yaml
+++ b/data/home.yaml
@@ -55,15 +55,12 @@ text_and_image:
     link: "/ecommerce-website-design"
     video_link: https://res.cloudinary.com/hungryram19/video/upload/v1628031193/hungryram/ka-intimacy_sgo1pk.mp4
 image_banner:
-  heading: Transform your ideas into a great product
-  body: Customize the framework to match your small business processes using simple
-    drag-and-drop tools.
+  heading: Scale your online presence with thoughtfully crafted designs
+  body: First impressions matter. By offering professional user experience and interface, you'll have a higher chance of reaching out to your audiences.
 work:
   heading: Recent Work
-  body: We design, build and support websites and apps for clients worldwide. We make
-    your business stand out. Interested? Let's chat.
+  body: Building lasting relationships with clients by providing quality support and designs. View the most recent work below.
 closing:
-  subtitle: Match the feel of your business
-  heading: Consult our experts about your project for free
-  body: We design, build and support websites and apps for clients worldwide. We make
-    your business stand out. Interested? Let's chat.
+  subtitle: Let's start a project
+  heading: Free website consultation
+  body: Get a website that will dominate your competitors and utilize to help scale your business.
