--- a/data/home.yaml
+++ b/data/home.yaml
@@ -1,6 +1,6 @@
 ---
 hero:
-  heading: Give your business a professional & trustworthy feel
+  heading: Give your business a professional & trustworthy website
   body: Elevate the customer experience with professionally designed websites for
     real estate and small business
   image: https://res.cloudinary.com/hungryram19/image/upload/v1627958655/hungryram/backdrop_pb13su.jpg
