--- a/data/profile.yaml
+++ b/data/profile.yaml
@@ -1,11 +1,11 @@
 ---
 company_name: Hungry Ram Web Design
 social_media:
-  instagram: er
-  twitter: er
-  facebook: er
-  pinterest: ''
-  yelp: ''
+  instagram: https://www.instagram.com/ramdettmer/
+  twitter: 
+  facebook: https://www.facebook.com/HungryRam/
+  pinterest: 
+  yelp: https://www.yelp.com/biz/hungry-ram-yorba-linda
   linkedin: ''
   tiktok: ''
 contact_information:
