update home page seo

--- a/data/home.yaml
+++ b/data/home.yaml
@@ -1,19 +1,19 @@
 ---
 hero:
-  heading: Give your business a professional & trustworthy website
-  body: An Orange County web design studio building modern websites for real estate professionals and small businesses
+  heading: Orange County web design for real estate professionals and small businesses
+  body: Give your business a professional & trustworthy website and grow a successful business online
   image: https://res.cloudinary.com/hungryram19/image/upload/v1627958655/hungryram/backdrop_pb13su.jpg
 featured_blocks:
 - heading: More Secure Than Traditional Websites
-  body: Benefit from a site more secure and safer than Wordpress. Our websites are accessed only through secure connections
+  body: Benefit from a site more secure and safer than Wordpress. Our websites are accessed only through secure connections and static files.
   image: https://res.cloudinary.com/hungryram19/image/upload/v1628018480/hungryram/cloud-security_sdox85.png
   image_alt: Cloud security
 - heading: Increased Website Performance and Speed
   body: Unlike most websites, we took out the need for a database.. now your website is served faster than sites with database.
   image: https://res.cloudinary.com/hungryram19/image/upload/v1628018378/hungryram/faster-website_xo6mrv.png
   image_alt: plane in a browser
-- heading: Website Designed for Search Engines
-  body: Your website will be fully optimized for search engines where they can easily identify your business for someone who needs your service.
+- heading: Powerful Websites Built for Search Engines
+  body: Your website will be fully optimized for search engines. This helps them identify your business for someone who needs your services.
   image: https://res.cloudinary.com/hungryram19/image/upload/v1628019175/hungryram/search-engine_mze9gk.png
   image_alt: c
 text_and_image:
@@ -49,15 +49,13 @@ text_and_image:
     video_link: https://res.cloudinary.com/hungryram19/video/upload/v1628031193/hungryram/ka-intimacy_sgo1pk.mp4
     title: 'Partnered with the the #1 ecommerce platform'
 image_banner:
-  heading: Scale your online presence with thoughtfully crafted designs
-  body: First impressions matter. By offering professional user experience and interface,
-    you'll have a higher chance of reaching out to your audiences.
+  heading: Scale your business with a website design that is thoughtfully crafted
+  body: Hungry Ram provides exceptional customer support, reliable web hosting, and maintenance for your website. Our website is designed to deliver a better user experience for your customers.
 work:
   heading: Recent Work
-  body: Building lasting relationships with clients by providing quality support and
-    designs. View the most recent work below.
+  body: We've designed websites for clients all over United States. There are many reason our clients refer their friends and family to us. View our recent web design case studies for various businesses ranging from real estate to franchised restuarants.
 closing:
   subtitle: Let's start a project
-  heading: Free website consultation
+  heading: Sign up for a free website consultation
   body: Get a website that will dominate your competitors and utilize to help scale
     your business.
