--- a/data/profile.yaml
+++ b/data/profile.yaml
@@ -9,10 +9,10 @@ social_media:
   linkedin: ''
   tiktok: ''
 contact_information:
-  phone: ''
+  phone: 657-549-5082
   name: Ram Dettmer
-  cell: 657-549-5082
-  address: 
+  cell: 951-454-2650
+  address: 5511 Mirage Street
   email: ram@hungryram.com
   city: Yorba Linda
   state: California
