--- a/netlify.toml
+++ b/netlify.toml
@@ -3,38 +3,69 @@ force = true
 from = "/customers/*"
 status = 301
 to = "/portfolio"
+
 [[redirects]]
 force = true
 from = "/free-site-setup/*"
 status = 301
 to = "/contact"
+
 [[redirects]]
 force = true
 from = "/real-estate-websites/"
 status = 301
 to = "/agent-idx-websites"
+
 [[redirects]]
 force = true
 from = "/projects/*"
 status = 301
 to = "/portfolio"
+
 [[redirects]]
 force = true
 from = "/pricing/"
 status = 301
 to = "/faq"
+
 [[redirects]]
 force = true
 from = "/jamstack-website-design/"
 status = 301
 to = "/custom-website-design"
+
 [[redirects]]
 force = true
 from = "/jamstack-website-design/"
 status = 301
 to = "/custom-website-design"
+
 [[redirects]]
 force = true
 from = "/ecommerce-website-design/"
 status = 301
 to = "/services/ecommerce-website-design/"
+
+[[redirects]]
+force = true
+from = "/agent-idx-websites/"
+status = 301
+to = "/services/agent-idx-websites/"
+
+[[redirects]]
+force = true
+from = "/broker-idx-websites"
+status = 301
+to = "/services/broker-idx-websites/"
+
+[[redirects]]
+force = true
+from = "/real-estate-agent-websites"
+status = 301
+to = "/services/real-estate-agent-websites/"
+
+[[redirects]]
+force = true
+from = "/real-estate-broker-websites/"
+status = 301
+to = "/services/real-estate-broker-websites/"
