--- a/data/profile.yaml
+++ b/data/profile.yaml
@@ -10,14 +10,14 @@ social_media:
   tiktok: ''
   youtube: ''
 contact_information:
-  phone: 657-549-5082
+  phone: (657) 549-5082
   name: Ram Dettmer
-  cell: 951-454-2650
-  address: '5511 Mirage Street #1007'
+  cell: (951) 454-2650
+  address: '5511 Mirage St #1007'
   email: ram@hungryram.com
   city: Yorba Linda
-  state: California
-  zip_code: "92886"
+  state: CA
+  zip_code: "92887"
   license: ''
 search_engine_optimization:
   title_tag: Orange County Website Design - Hungry Ram Web Design
