--- a/data/appearance.yaml
+++ b/data/appearance.yaml
@@ -7,4 +7,4 @@ footer:
   heading: Perfect partner for success
   body: Providing the best cutting-edge technology and tools to deliver you high-quality
     websites. Always aiming to provide the highest level of service. Need help growing
-    your business? Let's connect with a real web developer.
+    your business? Let's connect with a web developer.
