updates and add calendly

--- a/data/home.yaml
+++ b/data/home.yaml
@@ -102,7 +102,6 @@ work:
     reason our clients refer their friends and family to us. View our recent web design
     case studies for various businesses ranging from real estate to franchised restuarants.
 closing:
-  subtitle: Let's start a project
-  heading: Sign up for a free website consultation
-  body: Get a website that will dominate your competitors and scale
-    your business.
+  subtitle: How we can help you
+  heading: Tell us about your business
+  body: Talk with a developer and find out how Hungry Ram can bring value to your business
