--- a/data/home.yaml
+++ b/data/home.yaml
@@ -1,13 +1,11 @@
 ---
 hero:
-  heading: Orange County web design for real estate professionals and small businesses
-  body: Give your business a professional & trustworthy website and grow a successful
-    business online
+  heading: Orange County Web Design and Development
+  body: We help you create, and maintain connections with your customers through our trustworthy website
   image: https://res.cloudinary.com/hungryram19/image/upload/v1627958655/hungryram/backdrop_pb13su.jpg
 featured_blocks:
 - heading: More Secure Than Traditional Websites
-  body: Benefit from a site more secure and safer than WordPress. Our websites are
-    accessed only through secure connections and static files.
+  body: Get the most out of your website with a secure site that will keep your website protected. Our websites are accessed only through SSL connections and static files!
   svg: <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><defs><style>.cls-2{fill:#42a5f5!important}</style></defs><g
     id="Protection"><path class="cls-2" d="M35 4a3 3 0 0 1-3-3 1 1 0 0 0-1-1H17a1
     1 0 0 0-1 1 3 3 0 0 1-3 3 1 1 0 0 0-1 1v6.29a17.78 17.78 0 0 0 11.66 16.65 1 1
@@ -47,8 +45,7 @@ featured_blocks:
     1 0 0 1 2 0zm4 0a1 1 0 0 1-2 0v-2a1 1 0 0 1 2 0zm4 0a1 1 0 0 1-2 0v-2a1 1 0 0
     1 2 0z"/></g></svg>
 - heading: Powerful Websites Built for Search Engines
-  body: Your website will be fully optimized for search engines. This helps them identify
-    your business for someone who needs your services.
+  body: Your website will be fully optimized for search engines. This helps them identify your business so you can rank higher in results pages and gain more potential customers!
   svg: <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><defs><style>.cls-2{fill:#42a5f5}</style></defs><g
     id="Scaning"><path d="m46.83 41.17-6.36-6.36L37.64 32a1 1 0 0 0-1.42 0l-3.57-3.56a18.06
     18.06 0 1 0-4.23 4.23L32 36.22a1 1 0 0 0 0 1.42l2.83 2.82 6.36 6.36a4 4 0 0 0
