--- a/data/home.yaml
+++ b/data/home.yaml
@@ -1,7 +1,7 @@
 ---
 hero:
   heading: Orange County Web Design and Development
-  body: We help you create, and maintain connections with your customers through our trustworthy website
+  body: We help you create, and maintain connections with your customers through our trustworthy websites
   image: https://res.cloudinary.com/hungryram19/image/upload/v1627958655/hungryram/backdrop_pb13su.jpg
 featured_blocks:
 - heading: More Secure Than Traditional Websites
