--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
+[context.production.environment]
+  HUGO_VERSION = "0.88.1"
+
 ############### REGULAR PAGES REDIRECT ###############
 
 [[redirects]]
