--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "https://www.hungryram.com/"
+baseURL = "https://splendorous-beijinho-ea6cc6.netlify.app/"
 languageCode = "en-us"
 enableRobotsTXT = "true"
